Stop IE7 displaying horizontal scrollbar in Document Library
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@10207 7033f55c-6c29-4ad8-afba-765cb616e738

Former-commit-id: 7ad4526694dc6a4e37aa8315ac6d3f052f85e117

--- a/root/projects/slingshot/source/web/components/documentlibrary/toolbar.css
+++ b/root/projects/slingshot/source/web/components/documentlibrary/toolbar.css
@@ -1,5 +1,6 @@
 .toolbar
 {
+   margin: 0px -10px;
    visibility: hidden;
 }
 
@@ -12,8 +13,7 @@
 .toolbar .nav-bar
 {
    clear: both;
-   height: 2em;
-   margin: 0 -10px;
+   min-height: 2em;
    padding: 0.5em;
 }
 
@@ -52,10 +52,9 @@
    padding: 2px 0px 1px 24px;
 }
 
-.toolbar .selected-items hr.yuimenuitemlabel
+.toolbar .selected-items hr
 {
    padding: 0px;
-   width: 132px;
 }
 
 .toolbar .onActionCopyTo
